# stagehand-python

./: .bumpversion.cfg  .env.example  .gitignore  .release-please-manifest.json  .stats.yml  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  HUGGINGFACE_SUPPORT.md  README.md  RELEASE_WORKFLOWS.md  api.md  changeset  pyproject.toml  pytest.ini  requirements.txt  run_evals.py  run_integration_tests.sh  setup.py  test_async_performance.py  test_changesets.py  test_local_mode.py
.changeset/: CHANGESET_TESTING.md  README.md  adamant-black-perch.md  certain-nice-caracara.md  config.json  gabby-gray-antelope.md  gorilla-of-strongest-novelty.md  groovy-mouflon-of-realization.md  hard-rivers-dance.md  magnetic-hedgehog-of-sunshine.md  modest-oyster-from-hyperborea.md  prehistoric-fluffy-sturgeon.md  prompt-loud-hound.md  snobbish-fortunate-tamarin.md  vague-steel-chamois.md  wealthy-lion-of-honeydew.md
.changeset/scripts/: changelog.py  changeset.py  check-changeset.py  validate-changesets.py  version.py
.github/: pull_request_template
.github/workflows/: changeset-publish.yml  changesets.yml  ci.yml  feature-parity.yml  publish-pypi.yml  publish.yml  release-doctor.yml  release.yml  test.yml
app/api/act/: route.ts
docs/: README.md  configuration_validation.md  llm_client_configuration.md  migration_guide.md  migration_utility.py  run_migration_check.ps1  troubleshooting.md  validate_migration.py
evals/: README.md  init_stagehand.py  run_all_evals.py  utils.py
evals/act/: act_form_filling.py  google_jobs.py
evals/extract/: extract_news_articles.py  extract_press_releases.py
evals/observe/: observe_search_results.py  observe_taxes.py
examples/: README.md  act_example.py  agent_example.py  agent_example_local.py  agent_example_sync.py  agent_execute.py  alibaba_config_example.py  byob_example.py  config_validation_example.py  custom_llm_endpoints.py  debug_example.py  env.py  example.py  example_huggingface.py  example_sync.py  extract-example.py  full_example.py  local_browser_playwright_example.py  local_example.py  local_server_multiregion_browser_example.py  logging_example.py  new-example.py  observe-example.py  playwright_page_example.py  pydoll_tab_example.py  quickstart.py  quickstart_jupyter_notebook.ipynb  remote_browser_playwright_example.py  second_example.py  test_agent.py  windows_powershell_example.py
scripts/: download-binary.py  download_binary.py  lint  test  test_local_mode.py
scripts/utils/: upload-artifact.sh
src/stagehand/: __init__.py  _base_client.py  _client.py  _compat.py  _pydantic_extract.py  _response.py  _session_extract.py  _streaming.py  _version.py  session.py
src/stagehand/_custom/: __init__.py  sea_binary.py  sea_server.py  session.py
src/stagehand/_utils/: _logs.py  _utils.py
src/stagehand/lib/: sea_binary.py  sea_server.py
src/stagehand/resources/: sessions.py  sessions_helpers.py
src/stagehand/types/: __init__.py  action.py  action_param.py  model_config_param.py  session_act_params.py  session_act_response.py  session_end_params.py  session_end_response.py  session_execute_agent_params.py  session_execute_agent_response.py  session_execute_params.py  session_execute_response.py  session_extract_params.py  session_extract_response.py  session_navigate_params.py  session_navigate_response.py  session_observe_params.py  session_observe_response.py  session_replay_response.py  session_start_params.py  session_start_response.py  stream_event.py
stagehand/: __init__.py  _core.py  agent.py  api.py  async_client.py  base.py  browser.py  client.py  config.py  context.py  domScripts.js  logging.py  main.py  metrics.py  page.py  playwright_proxy.py  schemas.py  sync_client.py  sync_page.py  utils.py
stagehand-python-sdk/: MANIFEST.in
stagehand-python-sdk/examples/: example.py
stagehand/a11y/: __init__.py  sync_utils.py  utils.py
stagehand/agent/: agent.py  anthropic_cua.py  google_cua.py  image_compression_utils.py  openai_cua.py
stagehand/handlers/: act_handler.py  act_handler_utils.py  cua_handler.py  extract_handler.py  observe_handler.py
stagehand/llm/: __init__.py  client.py  huggingface_client.py  inference.py  prompts.py  qwenclient.py  structed_output_handler.py
stagehand/old_server/: .gitignore  package-lock.json
stagehand/server/: .eslintrc.cjs  README.md  drizzle.config.ts  package.json
stagehand/sync/: __init__.py  agent.py  client.py  context.py  page.py
stagehand/sync/handlers/: act_handler.py  extract_handler.py  observe_handler.py
stagehand/types/: __init__.py  agent.py  base.py  page.py
tests/: README.md  conftest.py  test_client.py  test_extract_files.py  test_files.py  test_local_server.py  test_models.py  test_response.py  test_sea_binary.py  test_session_extract_pydantic.py  test_session_model_config_params.py  test_session_page_param.py  test_sessions_create_helper.py  test_streaming.py
tests/api_resources/: test_sessions.py
tests/e2e/: test_act_integration.py  test_extract_casing_normalization.py  test_extract_integration.py  test_observe_integration.py  test_stagehand_integration.py  test_workflows.py
tests/fixtures/ax_trees/: input-radio.json  input-range.json  list_links.json  select-menu.json  select.json
tests/fixtures/html_pages/: input-radio.html  input-range.html  list_links.html  select.html
tests/functional/: test_sync_client.py
tests/integration/: README.md  test_llm_providers.py  test_observe_integration.py  test_stagehand_integration.py
tests/integration/api/: test_core_api.py  test_frame_id_integration.py
tests/integration/end_to_end/: test_workflows.py
tests/integration/local/: test_core_local.py
tests/mocks/: mock_llm.py  mock_server.py
tests/performance/: test_performance.py
tests/regression/: test_act_timeout.py  test_extract_aigrant_companies.py  test_instructions.py  test_ionwave.py  test_wichita.py
tests/test_utils/: test_json.py  test_path.py
tests/unit/: test_client_api.py  test_client_concurrent_requests.py  test_client_initialization.py  test_client_lifecycle.py  test_client_lock.py  test_client_lock_scenarios.py
(+42 files in other folders)
